--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.1.2",
     "@nuxtjs/eslint-module": "^1.1.0",
+    "@nuxtjs/style-resources": "^1.0.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.5.1",
-    "eslint-plugin-nuxt": ">=0.4.3"
+    "eslint-plugin-nuxt": ">=0.4.3",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
+    "sass-resources-loader": "^2.0.1"
   }
 }
