--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.6.0",
     "nuxt": "^2.9.2",
-    "@nuxtjs/axios": "^5.6.0"
+    "vee-validate": "^3.0.11"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.1.2",
