--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore . --fix"
   },
   "dependencies": {
+    "@0xcert/cert": "^2.0.0-alpha9",
+    "@0xcert/ethereum-asset-ledger": "^2.0.0-alpha9",
+    "@0xcert/ethereum-http-provider": "^2.0.0-alpha9",
+    "@0xcert/wanchain-asset-ledger": "^2.0.0-alpha9",
+    "@0xcert/wanchain-http-provider": "^2.0.0-alpha9",
     "@nuxtjs/axios": "^5.6.0",
     "nuxt": "^2.10.1",
     "vee-validate": "^3.0.11"
