--- a/package.json
+++ b/package.json
@@ -12,24 +12,24 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore . --fix"
   },
   "dependencies": {
-    "@0xcert/cert": "^2.0.0-alpha9",
-    "@0xcert/ethereum-asset-ledger": "^2.0.0-alpha9",
-    "@0xcert/ethereum-http-provider": "^2.0.0-alpha9",
-    "@0xcert/wanchain-asset-ledger": "^2.0.0-alpha9",
-    "@0xcert/wanchain-http-provider": "^2.0.0-alpha9",
-    "@nuxtjs/axios": "^5.8.0",
-    "nuxt": "^2.10.2",
-    "vee-validate": "^3.0.11"
+    "@0xcert/cert": "^2.0.0-beta1",
+    "@0xcert/ethereum-asset-ledger": "^2.0.0-beta1",
+    "@0xcert/ethereum-http-provider": "^2.0.0-beta1",
+    "@0xcert/wanchain-asset-ledger": "^2.0.0-beta1",
+    "@0xcert/wanchain-http-provider": "^2.0.0-beta1",
+    "@nuxtjs/axios": "^5.9.3",
+    "nuxt": "^2.11.0",
+    "vee-validate": "^3.2.3"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^1.1.2",
+    "@nuxtjs/eslint-config": "^2.0.0",
     "@nuxtjs/eslint-module": "^1.1.0",
     "@nuxtjs/style-resources": "^1.0.0",
     "babel-eslint": "^10.0.3",
-    "eslint": "^6.6.0",
-    "eslint-plugin-nuxt": ">=0.4.3",
-    "node-sass": "^4.13.0",
-    "sass-loader": "^8.0.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-nuxt": ">=0.5.0",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
     "sass-resources-loader": "^2.0.1"
   }
 }
