--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore . --fix"
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore . --fix",
+    "deploy": "./deploy.sh"
   },
   "dependencies": {
     "@0xcert/cert": "2.0.1",
